# cmd/documentation/main.go
@@ -1,0 +1,66 @@
+package main
+
+import (
+	"github.com/gofiber/fiber/v2"
+	"github.com/gofiber/fiber/v2/middleware/cors"
+	"github.com/gofiber/fiber/v2/middleware/recover"
+	"github.com/gofiber/swagger"
+
+	// docs are generated by Swag CLI, you have to import them.
+	// replace with your own docs folder, usually "github.com/username/reponame/docs"
+	_ "backend/docs"
+) // swagger handler
+
+// @title Fiber Example API
+// @version 2.0
+// @description This is a sample swagger for Fiber
+// @termsOfService http://swagger.io/terms/
+// @contact.name API Support
+// @contact.email fiber@swagger.io
+// @license.name Apache 2.0
+// @license.url http://www.apache.org/licenses/LICENSE-2.0.html
+// @host localhost:8080
+// @BasePath  /api/v1
+// @Schemes http https
+// @securityDefinitions.apikey ApiKeyAuth
+// @in header
+// @name Authorization
+// @externalDocs.description  OpenAPI
+// @externalDocs.url          https://swagger.io/resources/open-api/
+func main() {
+	// Fiber instance
+	app := fiber.New()
+
+	// Middleware
+	app.Use(recover.New())
+	app.Use(cors.New())
+
+	// Routes
+	app.Get("/", HealthCheck)
+	app.Get("/swagger/*", swagger.HandlerDefault) // default
+
+	err := app.Listen(":8080")
+	if err != nil {
+		return
+	}
+}
+
+// HealthCheck godoc
+// @Summary Show the status of server.
+// @Description get the status of server.
+// @Tags root
+// @Accept */*
+// @Produce json
+// @Success 200 {object} map[string]interface{}
+// @Router / [get]
+func HealthCheck(c *fiber.Ctx) error {
+	res := map[string]interface{}{
+		"data": "Server is up and running",
+	}
+
+	if err := c.JSON(res); err != nil {
+		return err
+	}
+
+	return nil
+}
